add social media links

--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
             <h1>Contact Lesley</h1>
             <div class="socialheader">
             
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-github"></a>
+            <a href="https://twitter.com/LPLangdon" class="fa fa-twitter"></a>
+            <a href="https://www.linkedin.com/in/lesleyplangdon/" class="fa fa-linkedin"></a>
+            <a href="https://github.com/LesleyPLangdon" class="fa fa-github"></a>
             </div>
         <!-- MightyForms Section --> <div class="mighty-form" id="mf-fef90ee3-0687-481e-8e77-a535f3381386"></div> <script async src="https://form.mightyforms.com/loader/v1/mightyforms.min.js"></script> <!-- End MightyForms Section -->
         </div>      
