--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         </div>
         <nav id="navbar">
             <ul>
-            <li><a class="navlink" href="index.html">About Me</a></li>
+                <li><a class="navlink" href="index.html">Home</a></li>
+                <li><a class="navlink" href="aboutme.html">About Me</a></li>
             <li><a class="navlink" href="missionstatement.html">Mission Statement</a></li>
             <li><a class="navlink" href="projects.html">Projects</a></li>
             <li><a class="navlink" href="contact.html">Contact</a></li>
@@ -24,10 +25,22 @@
     <section id="about-me">
         <h1>ABOUT ME</h1>
         <p>I am Lesley Langdon, wife, mother, self-trained chef, weekend horticulturist, and cum laude graduate pursuing a new career in computer science and a MBA while dreaming of hiking the Appalachian Trail one day.  After careers as a restaurant manager and realtor I would like to combine my new skills with my existing tallents to fulfill my passion for helping others find success.  I am actively looking for employment as a data analyst, project manager, or small business consultant. </p>
-        <p>I achieved the position of general manager for Chili's restaurants after climbing the ranks from line cook up through management.  I was the general manager of a culinary test restaurant well as a management training location.  I was trusted with our newest menu items and our newest managers, responsibilities that I took very seriously.  The way that I ran my restaurant affected not only my staff and our guests but also the staff and guests of almost 20 other restaurants and the careers of up to a dozen managers a year.  From my time as a restaurant manager, I learned leadership, organization, managing and understanding budgets, and to take responsibility for everything that happened under my charge.  As rewarding as my career as a restaurant manager was, I always knew that it was not the career I wanted to eventually retire from.</p>
-        <p>About 10 years ago I made the leap, left the security of a salary position as a restaurant manager and dove headfirst into real estate.  It was exciting.  Every deal is different.  At times I helped people make the single most significant purchase of their lives, other times I took on the responsibility of ensuring that a seller got the most they could out of the sale of their home.  Selling real estate is a tremendous responsibility.  I learned to negotiate and to work with different types of people.  Possibly most valuable, I learned to really listen to what my client wanted and what they needed.  I was working in real estate at an exciting time.  Technology was constantly changing the way we marketed properties and the way we conducted business.  Over time, I became the go to person for technology questions.  Whether it was a problem with their personal computer, help setting up their social media or guidance managing their website I would do whatever I could to help out the other agents in my company.  That was the start of what would become my pursuit of a career in technology.</p>
-        <p>I continued to work as a realtor while I began pursuing my computer science degree. After my daughter was born, I reduced my hours a bit, only working with my investors and other repeat clients so I could keep my daughter with me. I felt so blessed to be in an industry that afforded me the opportunity to juggle it all. That became a more difficult task as my daughter got older. She has a medical condition that made us uncomfortable sending her to daycare when she was so young. In 2019 I continued to reduce my work hours and eventually left real estate to focus on my education and my daughter. </p>
-        <p>Fast forward to 2021, I have completed my BS in computer science, began working towards my MBA, my daughter is ready for school, and I am excited to get to work. Feel free to browse around my site. You will find the history of my <a href="missionstatement.html">personal mission statement</a> and how it guides me forward. I have included some sample projects including this website. If you would like to get in touch check out my contact page.</p>
+        <a class="indexlink" href="https://lesleyplangdon.github.io/Portfolio/aboutme.html/#readmore">Read more About Me</a>
+        <h1>MISSION STATEMENT</h1>
+        <h4>Personal mission statement: to encourage, guide, and support others in their path to success.</h4>
+                <p>This applies to my family, clients, colleagues, and direct reports. In my home, we encourage each other to follow our dreams, whatever they are. Right now, my daughter wants to be a princess. It wouldn’t be my first choice for her, but I wanted to know more so I asked her why. Her 4-year-old response, “because they help people”. Talk about a proud mom moment. Anyway, I hope in time she realizes that she doesn’t need to marry Archie or Louis to help people, but I fully support her dreams.</p>
+                <p>I developed this mission statement by looking back at my career and reflecting on what was most important to me in each position I held. I realized that helping others achieve success was a common thread and one that I am proud of. Before I talk more about how this trait showed itself in prior roles, I would like to talk about how I see it moving forward. There are three positions I am currently interested in pursuing: project manager, data analyst, and small business consultant. In some ways they are very different, but they all utilize my skills to help others achieve their goals. As a project manager I would use my leadership and organizational skills to help an organization by efficiently facilitating any type of project. As a data analyst I would call on my analytical and technological skills to help an organization understand their data and utilize it to make better business decisions. As a small business consultant, I would pull together all my skills, but especially my problem-solving skills, to help a small business find ways to run smoother and more efficiently taking advantage of technologies and tools they may not be familiar with. </p>
+                <a class="indexlink" href="missionstatement.html">Read full mission statement text here</a>
+                <h1>PROJECT SAMPLES</h1>
+                <p>Head over to my <a href="projects.html">Projects</a> page to view some of my work and/or check out any of the links below.</p>
+                <p>My <a href="https://www.freecodecamp.org/lesleylangdon">freeCodeCamp</a> profile</p>
+                <p>My <a href="https://github.com/LesleyPLangdon?tab=repositories">github</a> repositories</p>
+
+                </ul>
+
+
+
+
     </section>
     
 </div>
