--- a/missionstatement.html
+++ b/missionstatement.html
@@ -14,7 +14,8 @@
             </div>
             <nav id="navbar">
                 <ul>
-                <li><a class="navlink" href="index.html">About Me</a></li>
+                    <li><a class="navlink" href="index.html">Home</a></li>
+                    <li><a class="navlink" href="aboutme.html">About Me</a></li>
                 <li><a class="navlink" href="missionstatement.html">Mission Statement</a></li>
                 <li><a class="navlink" href="projects.html">Projects</a></li>
                 <li><a class="navlink" href="contact.html">Contact</a></li>
@@ -26,7 +27,7 @@
                 <h4>Personal mission statement: to encourage, guide, and support others in their path to success.</h4>
                 <p>This applies to my family, clients, colleagues, and direct reports. In my home, we encourage each other to follow our dreams, whatever they are. Right now, my daughter wants to be a princess. It wouldn’t be my first choice for her, but I wanted to know more so I asked her why. Her 4-year-old response, “because they help people”. Talk about a proud mom moment. Anyway, I hope in time she realizes that she doesn’t need to marry Archie or Louis to help people, but I fully support her dreams.</p>
                 <p>I developed this mission statement by looking back at my career and reflecting on what was most important to me in each position I held. I realized that helping others achieve success was a common thread and one that I am proud of. Before I talk more about how this trait showed itself in prior roles, I would like to talk about how I see it moving forward. There are three positions I am currently interested in pursuing: project manager, data analyst, and small business consultant. In some ways they are very different, but they all utilize my skills to help others achieve their goals. As a project manager I would use my leadership and organizational skills to help an organization by efficiently facilitating any type of project. As a data analyst I would call on my analytical and technological skills to help an organization understand their data and utilize it to make better business decisions. As a small business consultant, I would pull together all my skills, but especially my problem-solving skills, to help a small business find ways to run smoother and more efficiently taking advantage of technologies and tools they may not be familiar with. </p>
-                <p>From here, I get into my experiences in past positions that helped to form my personal mission statement. It is a topic I am passionate about, so it is not a short piece. <a class="link" href="#fullms">Click here if you would like to read more.</a></p>
+                
                 <hr />
                 
                     <p id="fullms">As a realtor, first time investors were some of my favorite clients. I started in real estate not long after the housing bubble burst. Short sales and foreclosures were a large percentage of the deals we closed, and they impacted my business in two ways. First, I worked with several first-time investors. I helped them find a good deal on a property, provided market analysis for a renovated property, and helped them sell or rent the completed flip. Second, I assisted quite a few people who had lost their homes either by negotiating the short sale of their home or by finding them a rental. The clients looking for rentals required a lot of diligence on my part to make sure that a prospective landlord could be comfortable and confident renting to them. I took my role as a huge responsibility and I was thrilled to be able to help people start over.</p>
