--- a/projects.html
+++ b/projects.html
@@ -15,8 +15,8 @@
         </div>
         <nav id="navbar">
           <ul>
-            <li><a class="navlink" href="index.html">About Me</a></li>
-            <li>
+            <li><a class="navlink" href="index.html">Home</a></li>
+                <li><a class="navlink" href="aboutme.html">About Me</a></li>
               <a class="navlink" href="missionstatement.html"
                 >Mission Statement</a
               >
