made adjustments for mobile

--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,13 @@
             <a href="https://twitter.com/LPLangdon" class="fa fa-twitter"></a>
             <a href="https://www.linkedin.com/in/lesleyplangdon/" class="fa fa-linkedin"></a>
             <a href="https://github.com/LesleyPLangdon" class="fa fa-github"></a>
+            <a href="mailto:Lesley@LesleyLangdon.com" class="fa fa-envelope-o" aria-hidden="true"></a>
             </div>
+
         <!-- MightyForms Section --> <div class="mighty-form" id="mf-fef90ee3-0687-481e-8e77-a535f3381386"></div> <script async src="https://form.mightyforms.com/loader/v1/mightyforms.min.js"></script> <!-- End MightyForms Section -->
+        <footer>
+            <div id="copyright">&copy;LesleyLangdon 2021</div>
+        </footer>
         </div>      
     </body>
 </html>
