--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
           <ul>
             <li><a class="navlink" href="index.html">Home</a></li>
                 <li><a class="navlink" href="aboutme.html">About Me</a></li>
-              <a class="navlink" href="missionstatement.html"
+              <li><a class="navlink" href="missionstatement.html"
                 >Mission Statement</a
               >
             </li>
@@ -67,7 +67,13 @@
             <p>This is your traditional Rock Paper Scissors game coded in HTML, CSS and Javascript</p>
           </div>
         </div>
+        <div>
+          <p>This site is also a sample project. LesleyLangdon.com has been fully coded by me using HTML and CSS, and hosted right on github. I will be incorporating some JavaScript and jQuery in future updates. The idea was to get a fully functioning portfolio webside up and running and add improvements over time. Interested in checking out my coding style, you can find this project in its <a href="https://github.com/LesleyPLangdon/Portfolio">github repository</a>.</p>
+        </div>
       </section>
+      <footer>
+        <div id="copyright">&copy;LesleyLangdon 2021</div>
+    </footer>
     </div>
   </body>
 </html>
