--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
     <section id="about-me">
         <h1>ABOUT ME</h1>
-        <p>I am Lesley Langdon, wife, mother, self-trained chef, weekend horticulturist, and cum laude graduate pursuing a new career in computer science and a MBA while dreaming of hiking the Appalachian Trail one day.  After careers as a restaurant manager and realtor I would like to combine my new skills with my existing tallents to fulfill my passion for helping others find success.  I am actively looking for employment as a data analyst, project manager, or small business consultant. </p>
+        <p>I am Lesley Langdon, wife, mother, self-trained chef, weekend horticulturist, and cum laude graduate pursuing a new career in computer science and a MBA while dreaming of hiking the Appalachian Trail one day.  After careers as a restaurant manager and realtor I would like to combine my new skills with my existing talents to fulfill my passion for helping others find success.  I am actively looking for employment as a data analyst, project manager, or small business consultant. </p>
         <a class="indexlink" href="aboutme.html#readmore">Read more About Me</a>
         <h1>MISSION STATEMENT</h1>
         <h4>Personal mission statement: to encourage, guide, and support others on their path to success.</h4>
