--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
               src="images/RPS.jpg"
               alt="Rock Paper Scissors"
             />
-            <a class="project-title" style="color: Black" href="RockPaperScissors/blob/master/index.html">
+            <a class="project-title" style="color: Black" href="RockPaperScissors/index.html">
                 Rock Paper Scissors
               </a>
             <p>This is your traditional Rock Paper Scissors game coded in HTML, CSS and Javascript</p>
