reworked for teaching

--- a/missionstatement.html
+++ b/missionstatement.html
@@ -30,7 +30,7 @@
           their path to success.
         </h4>
         <p>
-          This applies to my family, clients, colleagues, and direct reports. In
+          This applies to my family, clients, colleagues, direct reports, and students. In
           my home, we encourage each other to follow our dreams, whatever they
           are. Right now, my daughter wants to be a princess. It wouldn’t be my
           first choice for her, but I wanted to know more so I asked her why.
@@ -43,7 +43,7 @@
           I developed this mission statement by looking back at my career and
           reflecting on what was most important to me in each position I held. I
           realized that helping others achieve success was a common thread and
-          one that I am proud of. Before I talk more about how this trait showed
+          one that I am proud of. Now, as an educator, I get to live my mission every day and I could not feel more blessed to get to spend my days with students excited about a future in Computer Science. <!--Before I talk more about how this trait showed
           itself in prior roles, I would like to talk about how I see it moving
           forward. There are three positions I am currently interested in
           pursuing: project manager, data analyst, and small business
@@ -57,7 +57,7 @@
           pull together all my skills, but especially my problem-solving skills,
           to help a small business find ways to run smoother and more
           efficiently taking advantage of technologies and tools they may not be
-          familiar with.
+          familiar with.-->
         </p>
 
         <hr />
