--- a/projects.html
+++ b/projects.html
@@ -16,11 +16,11 @@
         <nav id="navbar">
           <ul>
             <li><a class="navlink" href="index.html">Home</a></li>
-                <li><a class="navlink" href="aboutme.html">About Me</a></li>
+           <!--     <li><a class="navlink" href="aboutme.html">About Me</a></li>
               <li><a class="navlink" href="missionstatement.html"
                 >Mission Statement</a
               >
-            </li>
+            </li> -->
             <li><a class="navlink" href="projects.html">Projects</a></li>
             <li><a class="navlink" href="contact.html">Contact</a></li>
           </ul>
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div>
-          <p>This site is also a sample project. LesleyLangdon.com has been fully coded by me using HTML and CSS, and hosted right on github. I will be incorporating some JavaScript and jQuery in future updates. The idea was to get a fully functioning portfolio webside up and running and add improvements over time. Interested in checking out my coding style, you can find this project in its <a href="https://github.com/LesleyPLangdon/Portfolio">github repository</a>.</p>
+          <p>This site is also a sample project. LesleyLangdon.com has been fully coded using HTML and CSS, and hosted right on github. I will be incorporating some JavaScript and other features in future updates. The idea was to get a fully functioning portfolio website up and running and add improvements over time. </p>
         </div>
       </section>
       <footer>
