--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
             <nav id="navbar">
                 <ul>
                 <li><a class="navlink" href="index.html">Home</a></li>
-                <li><a class="navlink" href="aboutme.html">About Me</a></li>
-                <li><a class="navlink" href="missionstatement.html">Mission Statement</a></li>
+        <!--        <li><a class="navlink" href="aboutme.html">About Me</a></li>
+                <li><a class="navlink" href="missionstatement.html">Mission Statement</a></li> -->
                 <li><a class="navlink" href="projects.html">Projects</a></li>
                 <li><a class="navlink" href="contact.html">Contact</a></li>
             </ul>
@@ -24,13 +24,13 @@
             </header>
             
             <h1>Contact Lesley</h1>
-            <div class="socialheader">
+        <!--    <div class="socialheader">
             
             <a href="https://twitter.com/LPLangdon" class="fa fa-twitter"></a>
             <a href="https://www.linkedin.com/in/lesleyplangdon/" class="fa fa-linkedin"></a>
             <a href="https://github.com/LesleyPLangdon" class="fa fa-github"></a>
             <a href="mailto:Lesley@LesleyLangdon.com" class="fa fa-envelope-o" aria-hidden="true"></a>
-            </div>
+            </div> -->
 
         <!-- MightyForms Section --> <div class="mighty-form" id="mf-fef90ee3-0687-481e-8e77-a535f3381386"></div> <script async src="https://form.mightyforms.com/loader/v1/mightyforms.min.js"></script> <!-- End MightyForms Section -->
         <footer>
