--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a class="navlink" href="missionstatement.html">Mission Statement</a></li> -->
             <li><a class="navlink" href="projects.html">Projects</a></li>
             <li><a class="navlink" href="contact.html">Contact</a></li>
+            <li><a class="navlink" href="educ630.html">Educ630</a></li>
         </ul>
            </nav>
         </header>
