educ630 nav update and POE section added

--- a/educ630.html
+++ b/educ630.html
@@ -15,14 +15,12 @@
         <nav id="navbar">
             <ul>
                 <li><a class="navlink" href="index.html">Home</a></li>
-                <!-- <li><a class="navlink" href="aboutme.html">About Me</a></li>
-            <li><a class="navlink" href="missionstatement.html">Mission Statement</a></li> -->
-            <li><a class="navlink" href="projects.html">Projects</a></li>
-            <li><a class="navlink" href="contact.html">Contact</a></li>
+                <li><a class="navlink" href="#630AboutMe">Module 1: About Me</a></li>
+                <li><a class="navlink" href="contact.html">Contact</a></li>
         </ul>
            </nav>
         </header>
-    <section id="about-me">
+    <section>
         <h1>ABOUT ME</h1>
         <div id="630AboutMe">
         <div id="amPic"></div>
@@ -30,6 +28,20 @@
         </p><p>I live South Jersey (if you know, you know) with my wife, 7-year-old daughter, and our spoiled little bunny. My three greatest joys are my family, teaching, and becoming a better teacher. I am pursuing my Doctor of Education degree (EdD) with a technology concentration. I love exploring new edtech tools.
         </p><p>My favorite technologies are those that make the planning and administrative part of my job easier and those that facilitate individualized student learning. In the pages of this blog, you will learn about some of my favorites. Magic School is a website with dozens of tools to assist educators, tools that help with lesson plans, and multiple-choice questions. It can even generate a quote or joke of the day based on a particular topic. Tools for student learning are developing quickly. I am currently watching companies that are working on platforms that will analyze student learning and adapt delivery methods to produce the best outcomes. 
             </p>
+        </div>
+    </div>
+    </section>
+    <section>
+        <h1>Philosophy of Education</h1>
+        <div id="630POE">
+        <div id=""><p></p>
+        </div>
+    </div>
+    </section>
+    <section id="">
+        <h1></h1>
+        <div id="">
+        <div id=""><p></p>
         </div>
     </div>
     </section>
