--- a/educ630.html
+++ b/educ630.html
@@ -3,6 +3,7 @@
     <head>
         <title>Lesley Langdon</title>
         <link rel="stylesheet" href="portfolio.css">
+        <script src="script.js"></script>
         
     </head>
     <body>
@@ -15,8 +16,8 @@
         <nav id="navbar">
             <ul>
                 <li><a class="navlink" href="index.html">Home</a></li>
-                <li><a class="navlink" href="#630AboutMe">Module 1: About Me</a></li>
-                <li><a class="navlink" href="contact.html">Contact</a></li>
+                <li class="tooltip"><a class="navlink" href="#630AboutMe">About Me</a><span class="tooltiptext">Module 1</span></li>
+                <li class="tooltip"><a class="navlink"  href="#630POE">Philosophy of Education</a><span class="tooltiptext">Module 2</span></li>
         </ul>
            </nav>
         </header>
