added juicemind video

--- a/educ630.html
+++ b/educ630.html
@@ -18,6 +18,7 @@
                 <li><a class="navlink" href="index.html">Home</a></li>
                 <li class="tooltip"><a class="navlink" href="#630AboutMe">About Me</a><span class="tooltiptext">Module 1</span></li>
                 <li class="tooltip"><a class="navlink"  href="#630POE">Philosophy of Education</a><span class="tooltiptext">Module 2</span></li>
+                <li class="tooltip"><a class="navlink"  href="#630POE">Philosophy of Education</a><span class="tooltiptext">Module 2</span></li>
         </ul>
            </nav>
         </header>
@@ -50,10 +51,14 @@
         </div>
     </div>
     </section>
-    <section id="">
-        <h1></h1>
+    <section id="juicemindSection">
+        <h1>Technology Lesson Demonstration</h1>
         <div id="">
-        <div id=""><p></p>
+        <div id="juicemindVideo">
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wLDcmC-j-xE?si=f2ttvEDrQk_axtpy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p>This video walks through the process of setting up a juicemind quiz. Juicemind quizzes don't have some of the team play features you get with Kahoot! but,
+                it has other features that enhance my computer science quizzes. 
+            </p>
         </div>
     </div>
     </section>
