--- a/educ630.html
+++ b/educ630.html
@@ -18,7 +18,7 @@
                 <li><a class="navlink" href="index.html">Home</a></li>
                 <li class="tooltip"><a class="navlink" href="#630AboutMe">About Me</a><span class="tooltiptext">Module 1</span></li>
                 <li class="tooltip"><a class="navlink"  href="#630POE">Philosophy of Education</a><span class="tooltiptext">Module 2</span></li>
-                <li class="tooltip"><a class="navlink"  href="#630POE">Philosophy of Education</a><span class="tooltiptext">Module 2</span></li>
+                <li class="tooltip"><a class="navlink"  href="#juicemindSection">Technology Demonstration</a><span class="tooltiptext">Module 5</span></li>
         </ul>
            </nav>
         </header>
