added professional development video

--- a/educ630.html
+++ b/educ630.html
@@ -18,7 +18,9 @@
                 <li><a class="navlink" href="index.html">Home</a></li>
                 <li class="tooltip"><a class="navlink" href="#630AboutMe">About Me</a><span class="tooltiptext">Module 1</span></li>
                 <li class="tooltip"><a class="navlink"  href="#630POE">Philosophy of Education</a><span class="tooltiptext">Module 2</span></li>
+                <li class="tooltip"><a class="navlink"  href="#professionalOrg">Benefits of Membership</a><span class="tooltiptext">Module 3</span></li>
                 <li class="tooltip"><a class="navlink"  href="#juicemindSection">Technology Demonstration</a><span class="tooltiptext">Module 5</span></li>
+                
         </ul>
            </nav>
         </header>
@@ -50,6 +52,17 @@
             </p>
         </div>
     </div>
+    </section>
+    <section id="professionalOrg">
+        <h1>Professional Development Presentation Assignment</h1>
+        <div>
+            <div id="PDvideo">
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KL_y9D61lOE?si=JM5zh36Wq1GTblKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p>This is a video of my presentation about the benefits of membership in professional organizations. I discuss the International Society for Technology in Education (ISTE)
+                 and the Computer Science Teachers Association (CSTA). Both of these organizations have been vital to my development as an educator.
+            </p>
+            </div>
+        </div>
     </section>
     <section id="juicemindSection">
         <h1>Technology Lesson Demonstration</h1>
